# boilerplate-django

./: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  pytest.ini  setup.cfg  tox.ini
mysite/mysite/: settings.py
