[metadata]
name = 
version = 1.0
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    Django

zip_safe = False
include_package_data = True
package_dir =
    = mysite
packages = find_namespace:
python_requires = >=3.9

[options.packages.find]
where = mysite
exclude =
    tests
